# Void

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  clean_linux.sh  dirty_linux.sh
libs/Lin/: run_game.sh
libs/Lin/Vulkan/: libvulkan.so.1
src/: Scene.cpp  Scene.hpp  main.cpp
src/Application/: Audio.cpp  Audio.hpp  GameCamera.cpp  GameCamera.hpp  UserInterface.cpp  UserInterface.hpp  Window.cpp
src/Foundation/: Camera.cpp  Camera.hpp  File.cpp  Log.hpp  Memory.cpp  Memory.hpp
src/Game/: Game.cpp  Game.hpp  MainMenu.cpp  Player.cpp  Player.hpp  Scene.cpp  Scene.hpp
src/Graphics/: 2DRenderer.cpp  2DRenderer.hpp  CommandBuffer.cpp  CommandBuffer.hpp  GPUDevice.cpp  GPUDevice.hpp  GPUProfiler.cpp  GPUResources.hpp  LoadGLTF.cpp  LoadGLTF.hpp  Render2D.cpp  Render2D.hpp  Skybox.cpp  Skybox.hpp  VoidImgui.cpp
src/Physics/: CollisionGeometry.h  ContactListener.cpp  Physics.cpp  Physics.hpp
src/Physics/Jolt/: RegisterTypes.cpp
src/Physics/Jolt/Core/: Reference.h  TempAllocator.h
src/Physics/Jolt/Math/: Mat44.h
src/Physics/Jolt/Physics/: PhysicsScene.cpp  PhysicsScene.h  PhysicsSystem.cpp  PhysicsSystem.h
src/Physics/Jolt/Physics/Body/: Body.cpp  Body.h  BodyInterface.cpp  BodyInterface.h  BodyManager.cpp  BodyManager.h
src/Physics/Jolt/Physics/Collision/Shape/: BoxShape.cpp  BoxShape.h  CapsuleShape.cpp  CapsuleShape.h  CompoundShape.cpp  CompoundShape.h  ConvexHullShape.cpp  ConvexHullShape.h  CylinderShape.cpp  CylinderShape.h  EmptyShape.h  HeightFieldShape.cpp  HeightFieldShape.h  MeshShape.cpp  MeshShape.h  OffsetCenterOfMassShape.h  PlaneShape.cpp  PlaneShape.h  RotatedTranslatedShape.cpp  RotatedTranslatedShape.h  ScaledShape.cpp  ScaledShape.h  Shape.h  SphereShape.cpp  SphereShape.h  TaperedCapsuleShape.cpp  TaperedCapsuleShape.h  TaperedCylinderShape.cpp  TaperedCylinderShape.h  TriangleShape.cpp  TriangleShape.h
src/Physics/Jolt/Shaders/: HairApplyDeltaTransform.dxil  HairApplyGlobalPose.dxil  HairCalculateCollisionPlanes.dxil  HairCalculateRenderPositions.dxil  HairGridAccumulate.dxil  HairGridClear.dxil  HairGridNormalize.dxil  HairIntegrate.dxil  HairSkinRoots.dxil  HairSkinVertices.dxil  HairTeleport.dxil  HairUpdateRoots.dxil  HairUpdateStrands.dxil  HairUpdateVelocity.dxil  HairUpdateVelocityIntegrate.dxil  TestCompute.dxil  TestCompute2.dxil
src/Shaders/: 2DShader.frag  2DShader.vert  compile.cmd  coreShader.frag  coreShader.frag.slang  coreShader.vert  coreShader1.slang  coreShaderNew.frag  debugRendering.frag  debugRendering.vert  imguiBindless.frag  imguiBindless.vert  skybox.frag  skybox.vert
