cmake_minimum_required(VERSION 3.26.0)

project(Void
        VERSION 0.0.0
        LANGUAGES CXX C
        DESCRIPTION "Void Practice Game Engine")

#C++ is only "required" to remove warnings for libraries
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
if(UNIX)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mssse3")
endif()

set(SDL3_INCLUDES "${CMAKE_CURRENT_SOURCE_DIR}/vender/SDL/include")
if(WIN32)
    set(VULKAN_INCLUDE_DIR "$ENV{VULKAN_SDK}/Include")
else(UNIX)
    set(VULKAN_INCLUDE_DIR "$ENV{VULKAN_SDK}/include")
endif()
set(CGLM_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/vender/cglm/include")
set(TLSF_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/vender/tlsf")
set(STACK_WALKER_DIR "${CMAKE_CURRENT_SOURCE_DIR}/vender/StackWalker/Main/StackWalker")
set(RAPID_HASH_DIR "${CMAKE_CURRENT_SOURCE_DIR}/vender/rapidhash")
set(VENDER_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/vender")
set(IMGUI_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/vender/imgui")
set(CGLTF_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/vender/cgltf")
set(SPRIV_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/vender/SPIRV-Reflect")
set(MESHOP_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/vender/meshoptimizer/src/")
#Set the location of the engine source.
set(ENGINE_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/src")
set(JOLT_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/vender/JoltPhysics/Jolt")

message(STATUS ${VULKAN_INCLUDE_DIR})

if(MSVC)
    set(VULKAN_LIB "$ENV{VULKAN_SDK}/Lib/vulkan-1.lib")
    set(SDL_LIB "${CMAKE_CURRENT_SOURCE_DIR}/libs/Win/SDL3/x64/SDL3.lib")
    set(JOLT_LIB "${CMAKE_CURRENT_SOURCE_DIR}/vender/JoltPhysics/Build/VS2026_CL/Debug/Jolt.lib")
endif()

file(GLOB_RECURSE GLSL_SOURCE_FILES "src/Shaders/*.vert" "src/Shaders/*.frag" "src/Shaders/*.comp" "src/Shaders/*.mesh" "src/Shaders/*.task")
file(GLOB_RECURSE GLSL_HEADER_FILES "src/Shaders/*.h")

set(VOID_SOURCE src/main.cpp
                src/Application/GameCamera.hpp
                src/Application/GameCamera.cpp
                src/Application/Input.hpp
                src/Application/Input.cpp
                src/Application/Window.hpp
                src/Application/Window.cpp
                src/Application/Keys.hpp
                src/Application/Keys.cpp

                src/Graphics/VoidImgui.hpp
                src/Graphics/VoidImgui.cpp
                src/Graphics/CommandBuffer.hpp
                src/Graphics/CommandBuffer.cpp
                src/Graphics/GPUDevice.cpp
                src/Graphics/GPUDevice.hpp
                src/Graphics/GPUProfiler.hpp
                src/Graphics/GPUProfiler.cpp
                src/Graphics/GPUResources.hpp
                src/Graphics/GPUResources.cpp
                src/Graphics/Renderer.hpp
                src/Graphics/Renderer.cpp
                src/Graphics/LoadGLTF.hpp
                src/Graphics/LoadGLTF.cpp
)

add_executable(Void ${VOID_SOURCE} ${GLSL_SOURCE_FILES} ${GLSL_HEADER_FILES})

if (WIN32)
    target_compile_definitions(Void PRIVATE
                               CGLM_FORCE_DEPTH_ZERO_TO_ONE
                               _CRT_SECURE_NO_WARNINGS
                               WIN32_LEAN_AND_MEAN
                               NOMINMAX
                               #VOID_IMGUI                        
                               VK_USE_PLATFORM_WIN32_KHR)
else(UNIX)
    target_compile_definitions(Void PRIVATE 
                               CGLM_FORCE_DEPTH_ZERO_TO_ONE
                               #VOID_IMGUI                     
                               VK_USE_PLATFORM_WAYLAND_KHR)
endif()

target_include_directories(Void SYSTEM PUBLIC  ${VULKAN_INCLUDE_DIR} 
                                               ${CMAKE_CURRENT_SOURCE_DIR}
                                               ${ENGINE_INCLUDE}
                                               ${SDL3_INCLUDES}
                                               ${RAPID_HASH_DIR}
                                               ${TLSF_INCLUDE_DIR}
                                               ${CGLM_INCLUDE_DIR}
                                               ${VENDER_INCLUDE}
                                               ${IMGUI_INCLUDE}
                                               ${CGLTF_INCLUDE}
                                               ${SPRIV_INCLUDE}
                                               ${MESHOP_INCLUDE}
											   ${JOLT_INCLUDE})

add_compile_definitions(SDL_MAIN_HANDLED)


set(FOUNDATION_SOURCE src/Foundation/Array.hpp
                      src/Foundation/Assert.hpp
                      src/Foundation/Bit.cpp
                      src/Foundation/Bit.hpp
                      src/Foundation/BlobSerialisation.cpp
                      src/Foundation/BlobSerialisation.hpp
                      src/Foundation/Blob.hpp
                      src/Foundation/Camera.cpp
                      src/Foundation/Camera.hpp
                      src/Foundation/Colour.cpp
                      src/Foundation/Colour.hpp
                      src/Foundation/File.cpp
                      src/Foundation/File.hpp
                      src/Foundation/HashMap.hpp
                      src/Foundation/HashMap.cpp
                      src/Foundation/Log.hpp
                      src/Foundation/Memory.cpp
                      src/Foundation/Memory.hpp
                      src/Foundation/Numerics.cpp
                      src/Foundation/Numerics.hpp
                      src/Foundation/Platform.hpp
                      src/Foundation/Process.cpp
                      src/Foundation/Process.hpp
                      src/Foundation/RelativeDataStructures.hpp
                      src/Foundation/ResourcePool.cpp
                      src/Foundation/ResourcePool.hpp
                      src/Foundation/ResourceManager.cpp
                      src/Foundation/ResourceManager.hpp
                      src/Foundation/String.cpp
                      src/Foundation/String.hpp
                      src/Foundation/Time.cpp
                      src/Foundation/Time.hpp
                      src/Foundation/WindowsDeclarations.hpp
)
add_library(Foundation STATIC ${FOUNDATION_SOURCE})

target_compile_definitions(Foundation PRIVATE
                                      CGLM_FORCE_DEPTH_ZERO_TO_ONE
                                      _CRT_SECURE_NO_WARNINGS
                                      TRACY_ENABLE
                                      TRACY_ON_DEMAND
                                      TRACY_NO_SYSTEM_TRACING)

if(WIN32)
    target_compile_definitions(Foundation PRIVATE
                                          WIN32_LEAN_AND_MEAN
                                          NOMINMAX)
endif()


target_include_directories(Foundation SYSTEM PRIVATE
                           ${CMAKE_CURRENT_SOURCE_DIR}
                           ${CGLM_INCLUDE_DIR}
                           ${TLSF_INCLUDE_DIR}
                           ${STACK_WALKER_DIR}
                           ${RAPID_HASH_DIR}
                           ${ENGINE_INCLUDE}
                           ${VENDOR_INCLUDE})

if (WIN32)
    target_link_libraries(Void PRIVATE
                          ${SDL_LIB}
                          ${VULKAN_LIB}
						  ${VOLD_LIB})
else()
    target_link_libraries(Void PRIVATE
                          dl
                          pthread
                          SDL3
                          vulkan)
endif()

add_library(External STATIC
    vender/tlsf/tlsf.c
    vender/tlsf/tlsf.h

    vender/imgui/imconfig.h
    vender/imgui/imgui_draw.cpp
    vender/imgui/backends/imgui_impl_sdl3.cpp
    vender/imgui/backends/imgui_impl_sdl3.h
    vender/imgui/imgui_internal.h
    vender/imgui/imgui_tables.cpp
    vender/imgui/imgui_widgets.cpp
    vender/imgui/imgui.cpp
    vender/imgui/imgui.h
    vender/imgui/imstb_rectpack.h
    vender/imgui/imstb_textedit.h
    vender/imgui/imstb_truetype.h

    #vender/tracy/tracy/Tracy.hpp
    #vender/tracy/tracy/TracyVulkan.hpp
    #vender/tracy/TracyClient.cpp

    #vender/enkiTS/LockLessMultiReadPipe.h
    #vender/enkiTS/TaskScheduler.cpp
    #vender/enkiTS/TaskScheduler.h

    vender/meshoptimizer/src/allocator.cpp
    vender/meshoptimizer/src/clusterizer.cpp
    vender/meshoptimizer/src/indexanalyzer.cpp
    vender/meshoptimizer/src/indexcodec.cpp
    vender/meshoptimizer/src/indexgenerator.cpp
    vender/meshoptimizer/src/meshoptimizer.h
    vender/meshoptimizer/src/overdrawoptimizer.cpp
    vender/meshoptimizer/src/partition.cpp
    vender/meshoptimizer/src/quantization.cpp
    vender/meshoptimizer/src/rasterizer.cpp
    vender/meshoptimizer/src/simplifier.cpp
    vender/meshoptimizer/src/spatialorder.cpp
    vender/meshoptimizer/src/stripifier.cpp
    vender/meshoptimizer/src/vcacheoptimizer.cpp
    vender/meshoptimizer/src/vertexcodec.cpp
    vender/meshoptimizer/src/vertexfilter.cpp
    vender/meshoptimizer/src/vfetchoptimizer.cpp
)

set_target_properties(External PROPERTIES SYSTEM ON)

if (WIN32)
    target_sources(External PRIVATE
                   vender/StackWalker/Main/StackWalker/StackWalker.cpp
                   vender/StackWalker/Main/StackWalker/StackWalker.h)
endif()

target_compile_definitions(External PRIVATE
                          TRACY_ENABLE
                          TRACY_ON_DEMAND
                          TRACY_NO_SYSTEM_TRACING)

if (WIN32)
    target_include_directories(External PRIVATE
                               ${SDL3_INCLUDES}
                               ${IMGUI_INCLUDE})
else()
    target_link_libraries(External PRIVATE
                          dl)
    target_include_directories(External PRIVATE
                               ${SDL3_INCLUDES}
                               ${IMGUI_INCLUDE})
endif()

target_link_libraries(Void PRIVATE Foundation External)

source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${VOID_SOURCE} ${GLSL_SOURCE_FILES} ${GLSL_HEADER_FILES} ${FOUNDATION_SOURCE})

target_compile_options(Void PRIVATE
                       $<$<CXX_COMPILER_ID:MSVC>:/W4>
                       $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-Wall -Wextra -pedantic>
)

if(MSVC)
    set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT Void)
endif()

set(THINGS_TO_COPY "${ENGINE_INCLUDE}/Assets")

message(STATUS "${ENGINE_INCLUDE}/Assets")

if (WIN32)
    list(APPEND THINGS_TO_COPY "${CMAKE_CURRENT_SOURCE_DIR}/libs/Win/SDL3/x64/SDL3.dll")
else(UNIX)
    list(APPEND THINGS_TO_COPY "${CMAKE_CURRENT_SOURCE_DIR}/libs/Lin/SDL3/x64/libSDL3.so.0.2.28"
                               "${CMAKE_CURRENT_SOURCE_DIR}/libs/Lin/SDL3/x64/libSDL3.so.0"
                               "${CMAKE_CURRENT_SOURCE_DIR}/libs/Lin/SDL3/x64/libSDL3.so"
                               "${CMAKE_CURRENT_SOURCE_DIR}/libs/Lin/SDL3/x64/libvulkan.so.1.4.341"
                               "${CMAKE_CURRENT_SOURCE_DIR}/libs/Lin/SDL3/x64/libvulkan.so.1"
                               "${CMAKE_CURRENT_SOURCE_DIR}/libs/Lin/SDL3/x64/libvulkan.so"
                               "${CMAKE_CURRENT_SOURCE_DIR}/libs/Lin/SDL3/x64/run_game.sh"
                               "${CMAKE_CURRENT_SOURCE_DIR}/libs/Lin/SDL3/x64/install.sh")
endif()

file(COPY ${THINGS_TO_COPY} DESTINATION ${CMAKE_BINARY_DIR})

#NOTE At release this needs to be updated to look for glslangValidator at a particular location.
if(UNIX)
    set(GLSL_VALIDATOR "glslangValidator")
elseif(${CMAKE_HOST_SYSTEM_PROCESSOR} STREQUAL "AMD64")
    set(GLSL_VALIDATOR "$ENV{VULKAN_SDK}/Bin/glslangValidator.exe")
else()
    set(GLSL_VALIDATOR "$ENV{VULKAN_SDK}/Bin32/glslangValidator.exe")
endif()

set(SPIRV_OUTPUT_DIR "${CMAKE_BINARY_DIR}/Assets/Shaders/")
foreach(GLSL ${GLSL_SOURCE_FILES})
    get_filename_component(STEM ${GLSL} NAME)
    set(SPIRV "${SPIRV_OUTPUT_DIR}${STEM}.spv")
    add_custom_command(
        OUTPUT ${SPIRV}
        COMMAND ${CMAKE_COMMAND} -E make_directory "${SPIRV_OUTPUT_DIR}"
        COMMAND ${GLSL_VALIDATOR} --target-env vulkan1.3 ${GLSL} -o ${SPIRV}
        DEPENDS ${GLSL} ${GLSL_HEADER_FILES}
    )
    list(APPEND SPIRV_BINARY_FILES ${SPIRV})
endforeach()

add_custom_target(CompileShaders DEPENDS ${SPIRV_BINARY_FILES})
add_dependencies(Void CompileShaders)
